--- a/BLUEPRINTS_PART1/src/main/resources/static/index.html
+++ b/BLUEPRINTS_PART1/src/main/resources/static/index.html
@@ -23,6 +23,7 @@
 
 </head>
 <body>
+<body>
 <header>
 
     <div style="margin: 2%">
@@ -31,7 +32,7 @@
         <h5>Author:</h5>
     </div>
     <div class="input-group" style="margin: 2%">
-        <input type="text" id="Author" placeholder="Author"/>
+        <input type="text" id="Author"/>
         <span class="input-group-btn">
 						<button type="button" class="btn btn-success"
                                 onclick="app.update(document.getElementById('Author').value)">Get blueprints</button>
@@ -59,7 +60,7 @@
     </div>
     <div class="col-lg-15">
         <button type="button" class="btn btn-outline-warning"
-                onclick="alert('Todo bien')">Create new BluePrint
+                onclick="app.createBluePrint(document.getElementById('Author').value)">Create new BluePrint
         </button>
         <h2 id="currentBluePrint"></h2>
         <canvas id="myCanvas" width="400" height="400" style="border:1px solid #000000;"></canvas>
@@ -67,7 +68,7 @@
         <div class="row">
 			<div class="col-sm">
 				<button type="button" class="btn btn-outline-success"
-						onclick="alert('Todo bien')">Save/Update
+						onclick="app.saveBP(document.getElementById('Author').value)">Save/Update
 				</button>
 			</div>
 			<div class="col-sm">
@@ -80,5 +81,5 @@
     </div>
 
 </div>
-</body>
+</body></body>
 </html>
